--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/CalculatorUpDown/Themes/Generic.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/CalculatorUpDown/Themes/Generic.xaml
@@ -81,7 +81,7 @@
                             <local:ButtonSpinner x:Name="Spinner" IsTabStop="False" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}"
                                          AllowSpin="{TemplateBinding AllowSpin}" ShowButtonSpinner="{TemplateBinding ShowButtonSpinner}">
                                 <local:WatermarkTextBox x:Name="TextBox" BorderThickness="0" 
-                                                        Background="{TemplateBinding Background}"
+                                                        Background="Transparent"
                                                         ContextMenu="{TemplateBinding ContextMenu}"
                                                         FontFamily="{TemplateBinding FontFamily}" 
                                                         FontSize="{TemplateBinding FontSize}" 
@@ -92,6 +92,7 @@
                                                         HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                         IsReadOnly="{Binding IsReadOnly, RelativeSource={RelativeSource TemplatedParent}}"
                                                         MinWidth="20" AcceptsReturn="False" 
+                                                        Padding="0"
                                                         TextAlignment="{TemplateBinding TextAlignment}"
                                                         TextWrapping="NoWrap" 
                                                         TabIndex="{TemplateBinding TabIndex}"
