--- a/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Themes/Generic/Brushes.xaml
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Themes/Generic/Brushes.xaml
@@ -3,108 +3,103 @@
                     xmlns:local="clr-namespace:Microsoft.Windows.Controls"
                     xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
                     xmlns:themes="clr-namespace:Microsoft.Windows.Controls.Themes">
-    
-    <SolidColorBrush x:Key="{x:Static themes:ResourceKeys.ControlNormalBackgroundKey}" Color="#FFFFFF" PresentationOptions:Freeze="true"/>
+
+    <SolidColorBrush x:Key="{x:Static themes:ResourceKeys.ControlNormalBackgroundKey}" Color="#FFFFFFFF" PresentationOptions:Freeze="true"/>
     <SolidColorBrush x:Key="{x:Static themes:ResourceKeys.ControlDisabledBackgroundKey}" Color="#F4F4F4" PresentationOptions:Freeze="true"/>
-    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlNormalBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true">
+
+
+    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlNormalBorderKey}" EndPoint="0,20" MappingMode="Absolute" StartPoint="0,0"  PresentationOptions:Freeze="true">
+        <GradientStop Color="#ABADB3" Offset="0.05"/>
+        <GradientStop Color="#E2E3EA" Offset="0.07"/>
+        <GradientStop Color="#E3E9EF" Offset="1"/>
+    </LinearGradientBrush>
+    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlMouseOverBorderKey}" StartPoint="0,0" EndPoint="0,1" PresentationOptions:Freeze="true" >
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
-                <GradientStop Color="#FFabadb3" Offset="0" />
-                <GradientStop Color="#FFdbdfe6" Offset="0.05000000074505806" />
-                <GradientStop Color="#FFdbdfe6" Offset="0.949999988079071" />
-                <GradientStop Color="#FFe3e9ef" Offset="1" />
+                <GradientStop Color="#5794BF" Offset="0.05"/>
+                <GradientStop Color="#B7D5EA" Offset="0.07"/>
+                <GradientStop Color="#C7E2F1" Offset="1"/>
+            </GradientStopCollection>
+        </LinearGradientBrush.GradientStops>
+    </LinearGradientBrush>       
+    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlFocusedBorderKey}" StartPoint="0,0" EndPoint="0,1" PresentationOptions:Freeze="true">
+        <LinearGradientBrush.GradientStops>
+            <GradientStopCollection>
+                <GradientStop Color="#3D7BAD" Offset="0.05"/>
+                <GradientStop Color="#A4C9E3" Offset="0.07"/>
+                <GradientStop Color="#B7D9ED" Offset="1"/>
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
-    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlMouseOverBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true" >
-        <LinearGradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FF3d7bad" Offset="0" />
-                <GradientStop Color="#FFa4c9e3" Offset="0.05000000074505806" />
-                <GradientStop Color="#FFa4c9e3" Offset="0.949999988079071" />
-                <GradientStop Color="#FFb7d9ed" Offset="1" />
-            </GradientStopCollection>
-        </LinearGradientBrush.GradientStops>
+
+
+
+
+    <SolidColorBrush x:Key="{x:Static themes:ResourceKeys.ButtonNormalOuterBorderKey}" Color="#FF707070" PresentationOptions:Freeze="true"/>
+    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ButtonNormalInnerBorderKey}" EndPoint="0,1" StartPoint="0,0" PresentationOptions:Freeze="true">
+        <GradientStop Color="#FAFFFFFF" Offset="0"/>
+        <GradientStop Color="#85FFFFFF" Offset="1"/>
     </LinearGradientBrush>    
-    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlFocusedBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true">
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonNormalBackgroundKey}" StartPoint="0,0" EndPoint="0,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
-                <GradientStop Color="#FF3d7bad" Offset="0" />
-                <GradientStop Color="#FFa4c9e3" Offset="0.05000000074505806" />
-                <GradientStop Color="#FFa4c9e3" Offset="0.949999988079071" />
-                <GradientStop Color="#FFb7d9ed" Offset="1" />
+                <GradientStop Color="#F3F3F3" Offset="0"/>
+                <GradientStop Color="#EBEBEB" Offset="0.5"/>
+                <GradientStop Color="#DDDDDD" Offset="0.5"/>
+                <GradientStop Color="#CDCDCD" Offset="1"/>
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonNormalOuterBorderKey}" Color="#FFABADB3"/>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonNormalInnerBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1">
+    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverOuterBorderKey}" Color="#3C7FB1"/>
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverInnerBorderKey}" StartPoint="0,0" EndPoint="0,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
-                <GradientStop Offset="0" Color="#FFfcfcfc"/>
-                <GradientStop Offset="0.69" Color="#FFf9f9f9"/>
-                <GradientStop Offset="0.69" Color="#FFf3f3f3"/>
-                <GradientStop Offset="1" Color="#FFf3f3f3"/>
+                <GradientStop Color="#FAFFFFFF" Offset="0"/>
+                <GradientStop Color="#85FFFFFF" Offset="1"/>
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonNormalBackgroundKey}" StartPoint="0.5,0" EndPoint="0.5,1">
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverBackgroundKey}" StartPoint="0,0" EndPoint="0,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
-                <GradientStop Offset="0" Color="#FFf2f2f2"/>
-                <GradientStop Offset="0.69" Color="#FFe8e8e8"/>
-                <GradientStop Offset="0.69" Color="#FFd1d1d1"/>
-                <GradientStop Offset="1" Color="#FFd1d1d1"/>
-            </GradientStopCollection>
-        </LinearGradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverOuterBorderKey}" Color="#FF3C7FB1"/>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverInnerBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1">
-        <LinearGradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FFfafdfe" Offset="0" />
-                <GradientStop Color="#FFf5fbfe" Offset="0.5" />
-                <GradientStop Color="#FFeff9fe" Offset="0.5009999871253967" />
-                <GradientStop Color="#FFe8f5fc" Offset="1" />
-            </GradientStopCollection>
-        </LinearGradientBrush.GradientStops>
-    </LinearGradientBrush>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverBackgroundKey}" StartPoint="0.5,0" EndPoint="0.5,1">
-        <LinearGradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FFeaf6fd" Offset="0" />
-                <GradientStop Color="#FFd9f0fc" Offset="0.5" />
-                <GradientStop Color="#FFbee6fd" Offset="0.5009999871253967" />
-                <GradientStop Color="#FFa7d9f5" Offset="1" />
+                <GradientStop Color="#FFEAF6FD" Offset="0"/>
+                <GradientStop Color="#FFD9F0FC" Offset="0.50"/>
+                <GradientStop Color="#FFBEE6FD" Offset="0.50"/>
+                <GradientStop Color="#FFA7D9F5" Offset="1"/>
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedOuterBorderKey}" Color="#FF2C628B"/>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedInnerBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1">
+    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedOuterBorderKey}" Color="#2C628B"/>
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedInnerBorderKey}" StartPoint="0,0" EndPoint="0,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
-                <GradientStop Color="#FF9eb0ba" Offset="0" />
-                <GradientStop Color="#FF9abacb" Offset="0.5" />
-                <GradientStop Color="#FF78aac5" Offset="0.5008999705314636" />
-                <GradientStop Color="#FF5a96b8" Offset="0.8999999761581421" />
-                <GradientStop Color="#FF68b2da" Offset="1" />
+                <GradientStop Color="#FAFFFFFF" Offset="0"/>
+                <GradientStop Color="#85FFFFFF" Offset="1"/>
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
     <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedBackgroundKey}" StartPoint="0.5,0" EndPoint="0.5,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
-                <GradientStop Color="#FFe5f4fc" Offset="0" />
-                <GradientStop Color="#FFc4e5f6" Offset="0.5" />
-                <GradientStop Color="#FF98d1ef" Offset="0.5009999871253967" />
-                <GradientStop Color="#FF68b3db" Offset="1" />
+                <GradientStop Color="#C2E4F6" Offset="0.5"/>
+                <GradientStop Color="#ABDAF3" Offset="0.5"/>
+                <GradientStop Color="#90CBEB" Offset="1"/>
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
+    <SolidColorBrush x:Key="{x:Static themes:ResourceKeys.ButtonDisabledOuterBorderKey}" Color="#ADB2B5" PresentationOptions:Freeze="true"/>
+
     <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.GlyphNormalForegroundKey}" Color="#FF000000" />
-    <CornerRadius x:Key="{x:Static themes:ResourceKeys.SpinButtonCornerRadiusKey}" TopLeft="0" TopRight="0" BottomRight="0" BottomLeft="0" PresentationOptions:Freeze="true" />    
+    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.GlyphDisabledForegroundKey}" Color="#A9A9A9" />
+    <CornerRadius x:Key="{x:Static themes:ResourceKeys.SpinButtonCornerRadiusKey}" TopLeft="0" TopRight="0" BottomRight="0" BottomLeft="0" PresentationOptions:Freeze="true" />
+
+    <!-- not used yet -->
+    <LinearGradientBrush x:Key="ButtonInnerBorderDisabledKey" EndPoint="0,1" StartPoint="0,0" PresentationOptions:Freeze="true">
+        <GradientStop Color="#FAFFFFFF" Offset="0"/>
+        <GradientStop Color="#85FFFFFF" Offset="1"/>
+    </LinearGradientBrush>
 
 </ResourceDictionary>
