--- a/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.TimelinePanel/Views/NavigationView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.TimelinePanel/Views/NavigationView.xaml
@@ -16,11 +16,11 @@
    Visit http://xceed.com and follow @datagrid on Twitter.
 
   ********************************************************************-->
-<TreeViewItem x:Class="Samples.Modules.ChildWindow.Views.NavigationView"
+<TreeViewItem x:Class="Samples.Modules.TimelinePanel.Views.NavigationView"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:views="clr-namespace:Samples.Modules.ChildWindow.Views"
-              Header="ChildWindow" Tag="{x:Type views:HomeView}">
+              xmlns:views="clr-namespace:Samples.Modules.TimelinePanel.Views"
+              Header="TimelinePanel" Tag="{x:Type views:HomeView}">
 
    <TreeViewItem.Resources>
       <Style TargetType="views:NavigationView" BasedOn="{StaticResource {x:Type TreeViewItem}}" />
